docs: update to GPLv3 license. Minor spelling fixes.

--- a/app/src/main/res/layout/activity_login_activity.xml
+++ b/app/src/main/res/layout/activity_login_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.schabi.ocbookmarks.LoginAcitivty"
+    tools:context="org.schabi.ocbookmarks.LoginActivity"
     android:padding="20dp">
 
     <ScrollView
