--- a/app/src/main/res/layout/activity_login_activity.xml
+++ b/app/src/main/res/layout/activity_login_activity.xml
@@ -51,37 +51,14 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="55dp"
-                android:layout_below="@+id/urlInputLayout">
-
-            <EditText
-                android:id="@+id/userInput"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/loginUserHint"
-                android:inputType="text"/>
-
-
-            </android.support.design.widget.TextInputLayout>
+                android:layout_below="@+id/urlInputLayout"/>
 
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/passwordInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/userInputLayout">
-
-                <EditText
-                    android:id="@+id/passwordInput"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="textPassword"
-                    android:hint="@string/loginPasswordHint"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
-
-            </android.support.design.widget.TextInputLayout>
+                android:layout_below="@+id/userInputLayout"/>
 
 
             <TextView
